--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
-    "react-router-dom": "^7.6.0",
+    "@heroicons/react": "^2.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@heroicons/react": "^2.2.0"
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.6",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
